# ECS

./: .gitmodules  CMakeLists.txt  ECS.cpp  LICENSE  README.md
.cache/clangd/index/: ecs_constants.hpp.10953A4417C74184.idx  entity_manager.cpp.6DA32B69B424561B.idx  entity_manager.hpp.BD83671E0C8B1B31.idx  ids.hpp.205FE6F14B7C9D19.idx  result.hpp.A79CCA88B60DE128.idx
app/: CMakeLists.txt  main.cpp  main_easier.cpp  main_easier_perf_tests.cpp
include/: error.hpp  ids.hpp  result.hpp
include/ecs/: component_array.hpp  component_array_d.hpp  component_manager.hpp  ecs_constants.hpp  ecs_controller.hpp  entity.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  system_manager_interface.hpp  system_signature.hpp
src/: component_manager.cpp  entity_manager.cpp  system.cpp  system_manager.cpp
test/: CMakeLists.txt  component_manager_tests.cpp  ecs_controller_tests.cpp  entity_manager_tests.cpp  system_manager_tests.cpp
